# MineAgent

./: .gitignore  .pre-commit-config.yaml  README.md  pixi.toml  pyproject.toml  pyrightconfig.json  test_action_client.py
.agents/skills/mineagent-dev-workflow/: SKILL.md
.agents/skills/mineagent-forge-mod/: SKILL.md
.agents/skills/mineagent-ipc/: SKILL.md
.agents/skills/mineagent-overview/: SKILL.md
.agents/skills/mineagent-python/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: gradle-build.yml  pre-commit.yml  pytest.yml
config_templates/: config.yaml
forge/: build.gradle  gradle.properties
forge/src/main/java/com/mineagent/: ActionHandler.java  ActionMessage.java  ActionState.java  ClientEventHandler.java  Config.java  DataBridge.java  InputInjector.java  MineAgentMod.java  NetworkHandler.java  Observation.java  RawInput.java
forge/src/main/java/com/mvi/mvimod/: Action.java  ActionHandler.java  ActionState.java  ClientEventHandler.java  Config.java  DataBridge.java  NetworkHandler.java  Observation.java
forge/src/test/java/com/mineagent/: ActionMessageTest.java  ClientEventHandlerTest.java  DataBridgeTest.java  InputInjectorTest.java  MineAgentModTest.java  MinecraftTestFixture.java  NetworkHandlerTest.java  ObservationTest.java  RawInputTest.java
mineagent/: config.py  engine.py  env.py  run.py  utils.py
mineagent/affector/: affector.py
mineagent/agent/: agent.py
mineagent/client/: __init__.py  connection.py  protocol.py
mineagent/learning/: icm.py  ppo.py  td.py
mineagent/memory/: trajectory.py
mineagent/monitoring/: event.py  event_bus.py
mineagent/monitoring/callbacks/: tensorboard.py
mineagent/perception/: visual.py
mineagent/reasoning/: critic.py  dynamics.py
scripts/: test_action_client.py
tests/: helper.py  test_config.py  test_utils.py
tests/affector/: test_affector.py
tests/agent/: test_agent.py
tests/client/: test_connection.py  test_protocol.py
tests/learning/: test_icm.py  test_ppo.py  test_td.py
tests/memory/: test_trajectory.py
tests/monitoring/: test_event.py  test_event_bus.py
tests/monitoring/callbacks/: test_tensorboard.py
tests/perception/: test_visual.py
tests/reasoning/: test_critic.py  test_dynamics.py
