[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mineagent"
version = "0.0.1"
authors = [
    { name="Thomas Hopkins", email="thomas.hopkins.research@gmail.com" }
]
description = "Research on virtual intelligence in Minecraft"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Development Status :: 1 - Planning",
]
dependencies = [
    "PyYAML",
    "dacite",
    "gymnasium",
    "numpy==1.26.4",
    "scipy",
    "torch",
    "torchvision",
    "tqdm",
    "tensorboard",
    "pyright",
]

[tool.hatch.build.targets.wheel]
packages = ["mineagent"]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/thomashopkins32/Minecraft-Virtual-Intelligence"
Issues = "https://github.com/thomashopkins32/Minecraft-Virtual-Intelligence/issues"

[project.scripts]
mineagent = "mineagent.engine:run"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-mock",
    "ruff",
    "types-PyYAML",
    "matplotlib",
]

[tool.pyright]
typeCheckingMode = "standard"
reportMissingImports = true
exclude = ["**/build"]

