[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mineagent"
version = "0.1.0"
description = "Research into virtual intelligence in Minecraft"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

[[project.authors]]
name = "Thomas Hopkins"

[project.urls]
Repository = "https://github.com/thomashopkins32/Minecraft-Virtual-Intelligence"
